@@ -1,3 +1,8 @@
+% File src/library/parallel/vignettes/parallel.Rnw
+% Part of the R package, http://www.R-project.org
+% Copyright 2011-3 R Core Team
+% Distributed under GPL 2 or later
+
 \documentclass[a4paper]{article}
 
 \usepackage{Rd, parskip, amsmath, enumerate}
@@ -282,7 +287,8 @@ information in the shape of extra arguments.
     SSH should be set
     up to use silent authentication: setups which require a password
     to be supplied may or may not work.
-  \item Socket communication is done over port 10187: site policies
+  \item Socket communication is done over port a randomly chosen port
+    in the range \code{11000:11999}: site policies
     might require some other port to be used, in which case set
     argument \code{port} or environment variable \env{R\_PARALLEL\_PORT}.
 \end{itemize}
